--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "octokit": "^1.1.0"
+  }
 }
