--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ci-matrix",
   "version": "0.0.1",
+  "type": "module",
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
@@ -9,6 +10,9 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --write --plugin-search-dir=. ."
+  },
+  "dependencies": {
+    "octokit": "^1.1.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.13",
@@ -19,16 +23,14 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-svelte3": "^3.2.0",
+    "gh-pages": "^3.2.3",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
+    "sort-package-json": "^1.50.0",
     "svelte": "^3.34.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "octokit": "^1.1.0"
   }
 }
