--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "target": "es2019",
     /**
 			svelte-preprocess cannot figure out whether you have a value or a type, so tell TypeScript
-			to enforce using \`import type\` instead of \`import\` for Types.
+			to enforce using `import type` instead of `import` for Types.
 			*/
     "importsNotUsedAsValues": "error",
     "isolatedModules": true,
