--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,8 +1,9 @@
 name: deploy
 
-on:
-  schedule:
-    - cron: '*/5 * * * *'
+on: push
+# on:
+#   schedule:
+#     - cron: '*/5 * * * *'
 
 jobs:
   deploy:
