--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -24,7 +24,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: echo "PUBLIC_REPOS_GITHUB_ACCESS_TOKEN=${PUBLIC_REPOS_GITHUB_ACCESS_TOKEN}" > .env
+      # debug:
+      - run: echo "FOO=${BAR}" > .env
+      - run: cat .env
+
+      - run: echo "VITE_GITHUB_ACCESS_TOKEN=${VITE_GITHUB_ACCESS_TOKEN}" > .env
       - run: yarn install --frozen-lockfile
       - run: yarn build
 
