--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -25,7 +25,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: yarn install --frozen-lockfile
-      - run: yarn build
+
+      - env:
+          PUBLIC_REPOS_GITHUB_ACCESS_TOKEN: ${{ secrets.PUBLIC_REPOS_GITHUB_ACCESS_TOKEN }}
+        run: yarn build
 
       - uses: 8398a7/action-slack@v3
         with:
