--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,8 @@
 name: deploy
 
-on: push
-# on:
-#   schedule:
-#     - cron: '*/5 * * * *'
+on:
+  schedule:
+    - cron: '*/5 * * * *'
 
 jobs:
   deploy:
