--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "svelte-kit dev --port 7777",
     "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
+    "preview": "http-server -p 8888 build",
     "check": "svelte-check --fail-on-warnings --tsconfig ./tsconfig.json",
     "check:watch": "yarn check --watch",
     "check-ts": "tsc --noEmit",
@@ -32,6 +32,7 @@
     "eslint-plugin-svelte3": "^3.2.0",
     "faker": "^5.5.3",
     "gh-pages": "^3.2.3",
+    "http-server": "^0.12.3",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "sort-package-json": "^1.50.0",
