--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sort": "sort-package-json"
   },
   "dependencies": {
+    "dayjs": "^1.10.5",
     "octokit": "^1.1.0",
     "svelte-table": "^0.1.17"
   },
