--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,8 @@ jobs:
 
       - env:
           PUBLIC_REPOS_GITHUB_ACCESS_TOKEN: ${{ secrets.PUBLIC_REPOS_GITHUB_ACCESS_TOKEN }}
+          MAX_DAYS_SINCE_LAST_PUSH: 180
+          MAX_REPOS: 1000
         run: yarn build
 
       - name: Deploy with gh-pages
