--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 export PUBLIC_REPOS_GITHUB_ACCESS_TOKEN=<YOUR GITHUB ACCESS TOKEN HERE>
+MAX_REPOS=100                # defaults to unlimited
+MAX_DAYS_SINCE_LAST_PUSH=180 # defaults to unlimited
