--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,6 +20,15 @@ jobs:
           PUBLIC_REPOS_GITHUB_ACCESS_TOKEN: ${{ secrets.PUBLIC_REPOS_GITHUB_ACCESS_TOKEN }}
           MAX_DAYS_SINCE_LAST_PUSH: 180
           MAX_REPOS: 1000
+          GITHUB_ORGS_ALL_REPOS: >-
+            compository
+            h-be
+            holo-host
+            holochain-ci
+            holochain-gym
+            holochain-in-action
+            holochain-open-dev
+            holochain
         run: yarn build
 
       - name: Deploy with gh-pages
