--- a/package.json
+++ b/package.json
@@ -18,29 +18,33 @@
     "sort": "sort-package-json"
   },
   "dependencies": {
-    "dayjs": "^1.10.5",
+    "chalk": "^4.1.1",
+    "dayjs": "^1.10.6",
+    "lodash": "^4.17.21",
     "octokit": "^1.1.0",
     "svelte-table": "^0.1.17"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.13",
-    "@sveltejs/kit": "next",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
+    "@sveltejs/kit": "v1.0.0-next.118",
+    "@types/bluebird": "^3.5.36",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "bluebird": "^3.7.2",
     "dotenv": "^10.0.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint": "^7.31.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "faker": "^5.5.3",
     "gh-pages": "^3.2.3",
     "http-server": "^0.12.3",
-    "prettier": "~2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
+    "prettier": "~2.3.2",
+    "prettier-plugin-svelte": "^2.3.1",
     "sort-package-json": "^1.50.0",
-    "svelte": "^3.34.0",
-    "svelte-check": "^2.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "svelte": "^3.40.0",
+    "svelte-check": "^2.2.3",
+    "svelte-preprocess": "^4.7.4",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.5"
   }
 }
