Minor infra tweaks

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 GITHUB_ORGS_ALL_REPOS="holochain holo-host"
-PUBLIC_REPOS_GITHUB_ACCESS_TOKEN=<YOUR GITHUB ACCESS TOKEN HERE>
+PUBLIC_REPOS_GITHUB_ACCESS_TOKEN="<YOUR GITHUB ACCESS TOKEN HERE>"
 MAX_REPOS=100                # defaults to unlimited
 MAX_DAYS_SINCE_LAST_PUSH=180 # defaults to unlimited
