Show holochain version from default.nix of happs

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ GITHUB_ORGS_ALL_REPOS="holochain holo-host"
 PUBLIC_REPOS_GITHUB_ACCESS_TOKEN="<YOUR GITHUB ACCESS TOKEN HERE>"
 MAX_REPOS=100                # defaults to unlimited
 MAX_DAYS_SINCE_LAST_PUSH=180 # defaults to unlimited
+UPDATE_EXISTING_REPOS="true" # defaults to true, can be set to false in development for speed
