--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -27,7 +27,11 @@ jobs:
       - run: yarn install --frozen-lockfile
 
       - env:
+          GITHUB_ORGS_ALL_REPOS: holochain
+          MAX_DAYS_SINCE_LAST_PUSH: 180
+          MAX_REPOS: 1
           PUBLIC_REPOS_GITHUB_ACCESS_TOKEN: ${{ secrets.PUBLIC_REPOS_GITHUB_ACCESS_TOKEN }}
+          UPDATE_EXISTING_REPOS: false
         run: yarn build
 
       - uses: 8398a7/action-slack@v3
