Fix cache dir glob

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Cache Repos
         uses: actions/cache@v2
         with:
-          path: 'repos/*/.git'
+          path: 'repos/*/*/.git'
           key: ${{ runner.os }}-repos-${{ hashFiles('.github/workflows/deploy.yaml') }}
           restore-keys: |
             ${{ runner.os }}-repos-
