--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:svelte": "svelte-kit dev --port 7777",
     "build": "rm -rf ./build/ && svelte-kit build",
     "preview": "http-server -p 8888 build",
+    "update-forks": "NODE_OPTIONS='--loader ts-node/esm' node ./bin/updateForks.ts",
     "check": "svelte-check --fail-on-warnings --tsconfig ./tsconfig.json",
     "check:watch": "yarn check --watch",
     "check-ts": "tsc --noEmit",
@@ -24,7 +25,8 @@
     "lodash": "^4.17.21",
     "octokit": "^1.1.0",
     "shelljs": "^0.8.4",
-    "svelte-table": "^0.1.17"
+    "svelte-table": "^0.1.17",
+    "ts-node": "9.1.1"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.13",
