--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@sveltejs/adapter-static": "^1.0.0-next.13",
     "@sveltejs/kit": "v1.0.0-next.118",
     "@types/bluebird": "^3.5.36",
+    "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "bluebird": "^3.7.2",
