--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --watch .env --watch package.json --watch yarn.lock --exec 'yarn dev:svelte'",
+    "dev": "nodemon --watch .env --watch package.json --watch svelte.config.js --watch tsconfig.json --watch yarn.lock --exec 'yarn dev:svelte'",
     "dev:svelte": "svelte-kit dev --port 7777",
     "build": "rm -rf ./build/ && svelte-kit build",
     "preview": "http-server -p 8888 build",
